tests/traits/traits.exp
Error ----------------------------------------------------------------------------------------------------- test.js:18:2

Cannot cast `(new Foo).x` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:18:2
   18| ((new Foo).x: number); // error: Qux wins
        ^^^^^^^^^^^

References:
   test.js:1:31
    1| declare class Foo extends Qux<string> mixins Bar<number> {
                                     ^^^^^^ [1]
   test.js:18:15
   18| ((new Foo).x: number); // error: Qux wins
                     ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:19:2

Cannot cast `(new Foo).y` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:19:2
   19| ((new Foo).y: string); // error: Bar wins
        ^^^^^^^^^^^

References:
   test.js:1:50
    1| declare class Foo extends Qux<string> mixins Bar<number> {
                                                        ^^^^^^ [1]
   test.js:19:15
   19| ((new Foo).y: string); // error: Bar wins
                     ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:20:2

Cannot cast `(new Foo).z` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:20:2
   20| ((new Foo).z: number); // error: Qux wins
        ^^^^^^^^^^^

References:
   test.js:1:31
    1| declare class Foo extends Qux<string> mixins Bar<number> {
                                     ^^^^^^ [1]
   test.js:20:15
   20| ((new Foo).z: number); // error: Qux wins
                     ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test2.js:2:24

Cannot reference type `I` [1] from a value position. [type-as-value]

   test2.js:2:24
   2| declare class C mixins I { }
                             ^

References:
   test2.js:1:19
   1| declare interface I { }
                        ^ [1]



Found 4 errors
